# auto-novel-writer

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/: config.toml
data/verify_run/: 01_loglines.json  02_characters.json  03_three_act_plot.json  04_chapter_plan.json  05_chapter_1_draft.json  manifest.json  story_input.json
docs/: BLOCKED.md  CODEX_WORKFLOW.md  DEVELOPMENT_GUIDE.md  GITHUB_CONVENTIONS.md  ROADMAP.md  TASKS.md
docs/superpowers/plans/: 2026-03-26-chapter-briefs-scene-cards.md  2026-03-30-autonomy-level-contract.md  2026-03-30-development-roadmap.md  2026-03-30-manual-resume-review-gate.md  2026-03-30-manual-review-gate-helper.md  2026-03-30-orchestration-roadmap-wording.md  2026-03-30-project-status-review-gate.md  2026-03-31-publish-bundle-summary.md  2026-04-12-next-action-story-state-summary.md  2026-04-12-shared-story-state-summary.md
docs/superpowers/specs/: 2026-03-26-chapter-briefs-scene-cards-design.md  2026-03-28-autonomous-workflow-rules-design.md  2026-03-30-autonomy-level-contract-design.md  2026-03-30-development-roadmap-design.md  2026-03-30-manual-resume-review-gate-design.md  2026-03-30-manual-review-gate-helper-design.md  2026-03-30-orchestration-roadmap-wording-design.md  2026-03-30-project-status-review-gate-design.md  (+3 more)
src/novel_writer/: __init__.py  __main__.py  cli.py  continuity.py  llm_client.py  pipeline.py  rerun_policy.py  schema.py  storage.py
src/novel_writer/llm/: base.py  (+4 more)
tests/: test_cli.py  test_continuity.py  test_llm_client.py  test_pipeline.py  test_rerun_policy.py  test_revision.py  test_storage.py
