[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-novel-writer"
version = "0.1.0"
description = "CLI MVP for short-story ideation and drafting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
novel-writer = "novel_writer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

